Save/Update files

--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -509,7 +509,7 @@
  tengri_events.38.a:0 "素晴らしい！"
  tengri_events.38.b:0 "我々はテングリのシャーマンを奨励するべきだ！"
  tengri_events.39.t:0 "教皇の使節"
- tengri_events.39.d:0 "ローマ教皇の公式な使節団が[Root.Capital.GetCapitalName]に到着し、[Root.Monarch.GetName]との謁見を求めている。使節の任務は、我々の[Root.Monarch.GetTitle]の誠実さを判断するため、再び彼が教会の長としての教皇のを受け入れることを聞き、より広いカトリック社会に[Root.Monarch.GetName]を含めることである。\nこれを達成するために、使節は多くの書物、地図、博識な者たちを連れている。確かにこれらの人物はまた、我々の秘密を学ぶことを強く望んでいるスパイである。また、我々のシャーマンが、外国の宗教界に屈服するような政策に反対し、それらを拒否することで大衆が満足するのは疑う余地がない。しかし、おそらくこれらのカトリック教徒が持っている知識は、その機会を逃すことを補って余りあるものだ。"
+ tengri_events.39.d:0 "ローマ教皇の公式な使節団が[Root.Capital.GetCapitalName]に到着し、[Root.Monarch.GetName]との謁見を求めている。使節の任務は、我々の[Root.Monarch.GetTitle]の誠実さを判断するため、再び彼が教会の長としての教皇を受け入れることを聞き、より広いカトリック社会に[Root.Monarch.GetName]を含めることである。\nこれを達成するために、使節は多くの書物、地図、博識な者たちを連れている。確かにこれらの人物はまた、我々の秘密を学ぶことを強く望んでいるスパイである。また、我々のシャーマンが、外国の宗教界に屈服するような政策に反対し、それらを拒否することで大衆が満足するのは疑う余地がない。しかし、おそらくこれらのカトリック教徒が持っている知識は、その機会を逃すことを補って余りあるものだ。"
  tengri_events.39.a:0 "これらのスパイを母国へ返せ！"
  tengri_events.39.b:0 "我々はローマ教会の忠実な信者だ。"
  tengri_events.40.t:0 "キリスト教の宣教師"
