--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -109,7 +109,7 @@
  brahmins_estate_events.1.d:0 "バラモンの財産の削減に反応し、州の敬虔なヒンドゥー教徒は我々の兵士たちからバラモンを保護するために立ち上がっている。"
  brahmins_estate_events.1.a:0 "よし。"
  brahmins_estate_events.2.t:0 "バラモンが宮廷地位への任命を要求"
- brahmins_estate_events.2.d:0 "バラモンは単なる宗教的な権威だけでなく世俗権力を求めてきた。昨今 [Root.Country.GetName] で影響力が増大させ、行政の重要な役職を占めている。重要な役職に任命されたことに満足し、[Root.Monarch.GetTitle]に一連の要求を携えて謁見した。ある行政の役職はバラモンに法律で委託させること、バラモンの慣習を法廷で必須とすること、さらには高位の行政職はバラモンの家系で世襲させることまでも要求した。要求は言語道断ではあるものも、バラモンの影響力はあまりにも高く、もし断れば我々の統治能力は大きく阻害されるだろう。"
+ brahmins_estate_events.2.d:0 "バラモンは単なる宗教的な権威だけでなく世俗権力を求めてきた。昨今 [Root.Country.GetName] で影響力が増大させ、行政の重要な役職を占めている。重要な役職に任命されたことに満足し、[Root.Monarch.GetTitle]に一連の要求を携えて謁見した。ある行政の役職はバラモンに法律で委託させること、バラモンの慣習を法廷で必須とすること、さらには高位の行政職はバラモンの家系で世襲させることまでも要求した。要求は言語道断ではあるものの、バラモンの影響力はあまりにも高く、もし断れば我々の統治能力は大きく阻害されるだろう。"
  brahmins_estate_events.2.a:0 "彼らの権威を受け入れよう。"
  brahmins_estate_events.6.b:0 "世俗的な権力に対する要求や縮小を拒否する。"
  EST_VAL_ACCEPTED_BRAHMIN_AUTHORITY:0 "宮廷に居座るバラモン: §Y$VAL$%§!"
