--- a/source/localisation/hinduism_l_english.yml
+++ b/source/localisation/hinduism_l_english.yml
@@ -98,7 +98,7 @@
  hindu_events.18.d:0 "すべての事柄の中の女神の本質に関する二年間のタントラ教の瞑想は、自然の神性そのものであるプラクリティと同一視するように導いた。 周囲とのあなたの精神の親和性は、他人を安心させ、[Root.GetName]の人々を結び付ける。"
  hindu_events.18.a:0 "オーム。"
  hindu_events.19.t:0 "守護者デーヴィー"
- hindu_events.19.d:0 "[Root.GetName]は、戦火に包まれている。あなたは、忠実なる人民を殺し、あなたの国を崩壊させようとしている敵との戦争中である。 あなたの民へそのような襲撃は容認できず、この戦争を起こした者たちに対して、あなたは、珍しく怒りの感情を燃やした。 他の人たちがあなたを見たなら、あなたは怒りと決意の中で恐ろしいものにならなければならないことは明らかだ。\n\n寺院で癒されていた時、その外観と残忍さが恐ろしい、カーリーの像が見えました。怒りで目は赤く、あなた自身の何かを見せてくる。それは目的意識だ。 カーリーが子供を守るのと同じように、あなたは[Root.GetName]の息子と娘を最後まで守る。"
+ hindu_events.19.d:0 "[Root.GetName]は、戦火に包まれている。あなたは、忠実なる人民を殺し、あなたの国を崩壊させようとしている敵との戦争中である。 あなたの民へそのような襲撃は容認できず、この戦争を起こした者たちに対して、あなたは、珍しく怒りの感情を燃やした。 他の人たちがあなたを見たなら、あなたは怒りと決意の中で恐ろしいものにならなければならないことは明らかだ。\n\n寺院で癒されていた時、その外観と残忍さが恐ろしい、カーリーの像が見えた。怒りで目は赤く、あなた自身の何かを見せてくる。それは目的意識だ。 カーリーが子供を守るのと同じように、あなたは[Root.GetName]の息子と娘を最後まで守る。"
  hindu_events.19.a:0 "破壊の中心にさえ、美しさはある。"
  hindu_events.19.b:0 "我々は、なすべきことをするが、この方法では、デーヴィーを見つけることは出来ない。"
  hindu_events.20.t:0 "カーリー派"
