--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -114,7 +114,7 @@
  kormlenije_abolished:0 "給餌の廃止"
  desc_kormlenije_abolished:0 "地方行政の給与が農民の手から直接支払われた古い給餌制度を廃止することは、財務の効率を大幅に高めている。"
  chamber_of_finance:0 "商工会議所"
- desc_chamber_of_finance:0 "独立した商工会議所を創設することにより、現金の出入りの効率が大幅に高めている。"
+ desc_chamber_of_finance:0 "独立した商工会議所を創設することにより、現金の出入りの効率が大幅に高まっている。"
  enserfed_peasants:0 "奴隷化された農民"
  desc_enserfed_peasants:0 "農民を奴隷化し、移動の権利を宣言することは、我々の軍隊のための人的資源を徴収する効率を高めている。"
  legal_serfdom:0 "適法な農奴制"
@@ -1212,7 +1212,7 @@
  growth_of_the_orthodox_church:0 "正教会の発展"
  desc_growth_of_the_orthodox_church:0 "オスマン帝国から奪還された土地での正教会の強化は、我々の支配下の人々をギリシャ正教へと強く振り戻した。"
  roman_italy:0 "ローマのイタリア"
- desc_roman_italy:0 "ローマ軍による南イタリアの再征服は帝国にとって大きな勝利であり、イタリアにおけるローマ帝国復活の熱意が広がっている。ルネサンス時代の多発した小規模戦争に疲れたイタリア人は帝国の真の再生とローマの平和の再建を望んでいる。"
+ desc_roman_italy:0 "ローマ軍による南イタリアの再征服は帝国にとって大きな勝利であり、イタリアにおけるローマ帝国復活の熱意が広がっている。ルネサンス時代に多発した小規模戦争に疲れたイタリア人は帝国の真の再生とローマの平和の再建を望んでいる。"
  theme_of_sicily:0 "シチリア軍管区"
  desc_theme_of_sicily:0 "シチリアは帝国の穀倉地帯と呼ばれており、その征服はコンスタンティノポリスと地中海の海軍に大きな恩恵を齎すだろう。"
  healing_the_schism:0 "五大総主教座"
@@ -1610,7 +1610,7 @@
  coromandel_exports:0 "デカンの輸出"
  desc_coromandel_exports:0 "デカン東部での主要な集積地の成長は、商業の掌握を強化し、結果として我が経済は景気づいている。"
  master_of_southern_india:0 "南インドの支配者"
- desc_master_of_southern_india:0 "南インドの豊かな土地の完全支配を達成することによって、インド洋の経済への堅固な支配を何とか確立できた。東アフリカからマラヤまでダッキニー語を聞くことができ、我が港から出発した製品を西の大都市や東の宮廷にたどり着く。"
+ desc_master_of_southern_india:0 "南インドの豊かな土地の完全支配を達成することによって、インド洋の経済への堅固な支配を何とか確立できた。東アフリカからマラヤまでダッキニー語を聞くことができ、我が港から出発した製品は西の大都市や東の宮廷にたどり着く。"
  coromandel_trade:0 "コロマンデル交易"
  desc_coromandel_trade:0 "コロマンデル海岸の全ての重要港の支配を通じて、我々の全交易会社の収益性が著しく増加した。"
  fall_of_vijayanagar:0 "権威の損失"
@@ -1620,7 +1620,7 @@
  bijapur_karnatak_modifier:0 "ビジャープル・カルターナカ"
  desc_bijapur_karnatak_modifier:0 "ビジャープルの南部カルナータカからコモリン岬のずっと向こうまでを支配下に置くことにより、西方貿易とデカンの多くの戦争で鍛えられた地域の一つという双方の意味で、強力な拠点を取った。地方の採用担当者へも海外からも、新兵が我が旗に殺到している。"
  bah_conquest_of_gujarat:0 "グジャラートの征服"
- desc_bah_conquest_of_gujarat:0 "グジャラートの貿易港を確保することにより、現在多くの北部インドの貿易を支配し、同様にメッカやメディナへの旅の為にほぼ全ての巡礼者のよって港が利用される。"
+ desc_bah_conquest_of_gujarat:0 "グジャラートの貿易港を確保することにより、現在多くの北部インドの貿易を支配し、同様にメッカやメディナへの旅の為にほぼ全ての巡礼者によって港が利用される。"
  direct_link_with_iran:0 "ペルシア世界との直接接触"
  desc_direct_link_with_iran:0 "アラビア海沿いのいくつかの重要港の直接支配を確立することにより、イランやアラビアとの直通交通手段を確保した。このことは、我々の若い国家を強くするのに必要なペルシア人学者や行政官、並びに自国の気候では繁殖できない質の高い戦馬を入手する機会を確保できるようにした。"
  monuments_of_delhi:0 "デリーの記念碑"
@@ -1658,7 +1658,7 @@
  converted_bengal:0 "ベンガルでの唯一の信仰"
  desc_converted_bengal:0 "我々はベンガル・デルタでの宗教的統一の恩恵を得ている。今や大多数が国教に従うので、真の敬虔な社会を目指すことができる。"
  mint_towns_bng:0 "鋳造都市"
- desc_mint_towns_bng:0 "多くの開拓地は現在、我が見識ある支配者の肖像が入った硬貨を多数作っている。生産を調整することにより、この硬化の価値を落とすことなく我が国庫を満たすことができる。"
+ desc_mint_towns_bng:0 "多くの開拓地は現在、我が見識ある支配者の肖像が入った硬貨を多数作っている。生産を調整することにより、この硬貨の価値を落とすことなく我が国庫を満たすことができる。"
  bng_textiles:0 "織物工房の近代化"
  desc_bng_textiles:0 "ベンガルの繊維産業は今や世界の中で最も生産的で革新的だ。"
  bng_sufi_mystic_settlers:0 "スーフィーの入植者"
