--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -71,7 +71,7 @@
  industrialization_events.8.d:0 "啓蒙思想の教えを受けて、貴族の地主たちが農業の効率を改善するために働き始めている。[agricultural_province.GetName]の地主は、新しい播種機、新しい作物、新しい輪作形式、そして品種改良を率先して行い手本になることで、地域の食糧生産を大幅に改善することができた。"
  industrialization_events.8.a:0 "他の人々も倣うべき偉大な先例だ。"
  industrialization_events.9.t:0 "経済発展"
- industrialization_events.9.d:0 "機械分野における最近の技術革新を採用することによって、地元の企業家は、[industrialization_province.GetName]での生産性を大幅に改善し始めている。その結果として、多くの人々が周辺の田舎から州へ行き、[industrialization_province.GetCapitalName]の成長都市で新しい仕事を熱心に探している。"
+ industrialization_events.9.d:0 "機械分野における最近の技術革新を採用することによって、地元の企業家は、[industrialization_province.GetName]での生産性を大幅に改善し始めている。その結果として、多くの人々が周辺の田舎から州へ行き、[industrialization_province.GetCapitalName]の成長する都市で新しい仕事を熱心に探している。"
  industrialization_events.9.a:0 "[industrialization_province.GetCapitalName]は、彼らの素晴らしい故郷になるだろう。"
  industrialization_events.10.t:0 "[industrialization_province.GetName]の繊維産業の成長"
  industrialization_events.10.d:0 "近代的な機械と作業方法を採用することで、[industrialization_province.GetName]の製織事業は、はるかに大規模なものに成長した。かつて地味な織物だけが輸出されていたところに、繁栄している布地生産部門があり、地元の経済に大きく貢献している。\nしかしながら、誰もがこの発展に満足しているわけではなく、[old_cloth_province.GetName]の職人たちは、市場に溢れている「低品質の製品」を取り締まるよう[old_cloth_province.Owner.GetAdjective]政府当局に陳情している。"
@@ -89,7 +89,7 @@
  industrialization_events.14.d:0 "コークス、蒸気機関車、ポンプといった近代的な産業機械の導入は[iron_province.GetName]の地域経済の発展に大きく貢献した。地元の鉄工業者はいま地域内でより良くなっている。"
  industrialization_events.14.a:0 "新たな時代の幕開けだ。"
  industrialization_events.15.t:0 "[textile_province.GetName]の繊維工場"
- industrialization_events.15.d:0 "繊維製品に対する需要の高まりと新製法や機械の採用により、[textile_province.GetName]の繊維地域は過去数年間で成長し、繁栄している。これは地域全体の景気の工場を齎し、現在多くの人々が田舎から新しい工場へと移っている。"
+ industrialization_events.15.d:0 "繊維製品に対する需要の高まりと新製法や機械の採用により、[textile_province.GetName]の繊維地域は過去数年間で成長し、繁栄している。これは地域全体の景気を刺激し、現在多くの人々が田舎から新しい工場へと移っている。"
  industrialization_events.15.a:0 "これらの機織りは国民全員に服を着せるだろう。"
  industrialization_events.16.t:0 "[ship_province.GetName]の造船所"
  industrialization_events.16.d:0 "業務組織の新たな進歩と技術革新によって[ship_province.GetName]の造船所には急速な成長が齎された。いま船舶や海軍用品はより効率的に生産されており、この経済的な向上の結果、地元の造船所で働く人々の数が増加している。"
