--- a/source/localisation/native_flavor_events_l_english.yml
+++ b/source/localisation/native_flavor_events_l_english.yml
@@ -14,7 +14,7 @@
  land_shaped_by_fire:0 "野焼き"
  desc_land_shaped_by_fire:0 "火をうまく使いこなした野焼きは、この地域での収量を増加させている。"
  native_americans.1.t:0 "凍った大地"
- native_americans.1.d:0 "我々が最初に[Root.GetName]に到着したとき、ここの環境の過酷さは、我々に与えられた乗り越えるべき試練だと考えた。我々は自信をもってこの地に残ることにしたのだが、冬の寒さはますます強くなり、その範囲も着実に広まっていった。ある一団は、ここは人間が住むべきところではないと主張している。彼らは自分たちに適した気候の土地へ移住しようと言っているのだ。"
+ native_americans.1.d:0 "我々が最初に[Root.GetName]に到着したとき、ここの環境の過酷さは、我々に与えられた乗り越えるべき試練だと考えられた。我々は自信をもってこの地に残ることにしたのだが、冬の寒さはますます強くなり、その範囲も着実に広まっていった。ある一団は、ここは人間が住むべきところではないと主張している。彼らは自分たちに適した気候の土地へ移住しようと言っているのだ。"
  native_americans.1.a:0 "これが我らの生き方だ。誰か奴らに教えてやれ。"
  native_americans.1.b:0 "彼らが望むのなら、その通りにしてやろう。"
  native_americans.2.t:0 "乾いた土地"
@@ -22,15 +22,15 @@
  native_americans.2.a:0 "これが我らの生き方だ。誰か奴らに教えてやれ。"
  native_americans.2.b:0 "彼らが望むのなら、その通りにしてやろう。"
  native_americans.3.t:0 "北方の新しい故郷"
- native_americans.3.d:0 "我々の部族は移住で繁栄しており、我々は移住した土地でどのように繁栄するのかを学ばなければならない。最後の移住以来、これは難しいことだと分かっている。[Root.GetName]では、特に冬には気温と気温が厳しく荒廃している。 幸いなことに、近隣の部族は長い間ここに住み、この雪で覆われた風景で狩りと収穫を学んでいる。彼らの中には我々を教えてくれる者もいるだろう。"
+ native_americans.3.d:0 "我々の部族は移住で繁栄しており、我々は移住した土地でどのように繁栄するのかを学ばなければならない。最後の移住以来、これは難しいことだと分かっている。[Root.GetName]では、特に冬には気温と天候が厳しく荒廃している。 幸いなことに、近隣の部族は長い間ここに住み、この雪で覆われた風景で狩りと収穫を学んでいる。彼らの中には我々に教えてくれる者もいるだろう。"
  native_americans.3.a:0 "過去の故郷では、我々は賢明だったが、ここでは、彼らが賢明だ。"
  native_americans.3.b:0 "我々は、土地そのものから学ぶ。"
  native_americans.4.t:0 "砂漠の中に私たちの新しい故郷"
- native_americans.4.d:0 "我々の部族は移住で繁栄しており、我々は移住した土地でどのように繁栄するのかを学ばなければならない。最後の移住以来、これは難しいことだと分かっている。[Root.GetName]では、特に夏には気温と気温が厳しく荒廃している。 幸いなことに、近隣の部族は長い間ここに住み、この不毛な風景で狩りと収穫を学んでいる。彼らの中には我々を教えてくれる者もいるだろう。"
+ native_americans.4.d:0 "我々の部族は移住で繁栄しており、我々は移住した土地でどのように繁栄するのかを学ばなければならない。最後の移住以来、これは難しいことだと分かっている。[Root.GetName]では、特に夏には気温と天候が厳しく荒廃している。 幸いなことに、近隣の部族は長い間ここに住み、この不毛な風景で狩りと収穫を学んでいる。彼らの中には我々に教えてくれる者もいるだろう。"
  native_americans.4.a:0 "過去の故郷では、我々は賢明だったが、ここでは、彼らが賢明だ。"
  native_americans.4.b:0 "我々は、土地そのものから学ぶ。"
  native_americans.5.t:0 "数える一撃"
- native_americans.5.d:0 "戦士にとって勇敢であることは重要な気質であり、これは我々の伝統に多く反映されている。そのようなものの一つに、戦闘での勇気の行為を記録する数える一撃があります。これは、我々の最上の兵士を象徴し、新兵を鼓舞させるために役立つ。しかしながら、我々は軍隊の改革のために$ARMY_REFORMER$を雇用しており、軍は敵を殺すより実践的な目標と効率に焦点を当てるよう求めている。"
+ native_americans.5.d:0 "戦士にとって勇敢であることは重要な気質であり、これは我々の伝統に多く反映されている。そのようなものの一つに、戦闘での勇気の行為を記録する数える一撃がある。これは、我々の最上の兵士を象徴し、新兵を鼓舞させるために役立つ。しかしながら、我々は軍隊の改革のために$ARMY_REFORMER$を雇用しており、軍は敵を殺すより実践的な目標と効率に焦点を当てるよう求めている。"
  native_americans.5.a:0 "$ARMY_REFORMER$は正しい。 勇気の精神よりも、結果が必要だ。"
  native_americans.5.b:0 "$ARMY_REFORMER$は臆病者のように聞こえる。"
  native_americans.6.t:0 "戦争指導者の任命"
@@ -42,7 +42,7 @@
  native_americans.7.a:0 "[Root.Monarch.GetName]は元に戻ります。 平和指導者が選出されるだろう。"
  native_americans.7.b:0 "政府は我々の国を守るだろう。 平和のようなものはない！"
  native_americans.8.t:0 "移住する人々と永住する人々"
- native_americans.8.d:0 "古代の物語は、我々の先祖が、今我々が故郷と呼ぶ土地に近づくために長い距離を旅した様子を伝えている。その時は過ぎ去っていますが、隣人の中には永住する家を建てるのではなく、新しい狩猟場に移住する生き方を選んだ者もいる。 我々はそれらの方法に戻ることに関心はないが、双方の選択肢の利点を認めて、我々の部族間で知識と財を交換することができる。"
+ native_americans.8.d:0 "古代の物語は、我々の先祖が、今我々が故郷と呼ぶ土地に近づくために長い距離を旅した様子を伝えている。その時は過ぎ去っているが、隣人の中には永住する家を建てるのではなく、新しい狩猟場に移住する生き方を選んだ者もいる。 我々はそれらの方法に戻ることに関心はないが、双方の選択肢の利点を認めて、我々の部族間で知識と財を交換することができる。"
  native_americans.8.a:0 "我々は、移住する人々がいる場合喜んで聞き入れる。"
  native_americans.8.a.tt:0 "使者を送って、富と知識を交換することを提案しよう。[This.GetName]は何と言っている？"
  native_americans.8.b:0 "我々は、適切な家でさえ建てることができない人々から何を学ぶことができるのか？"
