--- a/source/localisation/third_rome_l_english.yml
+++ b/source/localisation/third_rome_l_english.yml
@@ -40,12 +40,12 @@
  siberian_events.3.a:0 "これについてできることはない。"
  siberian_events.3.b:0 "領民を統治する必要がある。"
  siberian_events.4.t:0 "コサックの探検"
- siberian_events.4.d:0 "コサックの探検家の集団はシベリアの川に沿って深く侵入していった。このような私的な探検は利益がある分、時として障害もまた多く、自由な考えを持つコサックたちは、地元の住民や彼らが通る州の間に道を開くために武力や強制、欺瞞を行うことにあまり疑問を覚えない。\n戻ってきた探検隊は今日良い知らせを持ってきた。新しい地図に加え、貴重な商品をもってきたのだ。"
+ siberian_events.4.d:0 "コサックの探検家の集団はシベリアの川に沿って深く侵入していった。このような私的な探検は利益がある分、時として障害もまた多く、自由な考えを持つコサックたちは、地元の住民や彼らが通る州の間に道を開くために武力や強制、欺瞞を用いることにあまり疑問を覚えない。\n戻ってきた探検隊は今日良い知らせを持ってきた。新しい地図に加え、貴重な商品をもってきたのだ。"
  siberian_events.4.a:0 "素晴らしい知らせだ！"
  EST_VAL_COSSACK_EXPLORERS:0 "コサックの探検家: §Y$VAL$%§!"
  siberian_events.4.b:0 "コサックの統制をする！"
  siberian_events.5.t:0 "[cossack_exploration_province.GetName]の幕間劇"
- siberian_events.5.d:0 "事業家たちはたまにコサックの探検家にシベリアの川に沿って侵入するために、資金を提供することがある。これらの探検は時として、利益もある分、障害も多く、時として障害もまた多く、自由な考えを持つコサックたちは、地元の住民や彼らが通る州の間に道を開くために武力や強制、欺瞞を行うことにあまり疑問を覚えない。\n今帰ってきた探検隊は参加者は多くの富を得たが、それによって地域の部族に加えて、隣国の一つと衝突も引き起こした。"
+ siberian_events.5.d:0 "事業家たちはたまにコサックの探検家にシベリアの川に沿って侵入するために、資金を提供することがある。これらの探検は利益もある分、時として障害もまた多く、自由な考えを持つコサックたちは、地元の住民や彼らが通る州の間に道を開くために武力や強制、欺瞞を用いることにあまり疑問を覚えない。\n今帰ってきた探検隊は参加者は多くの富を得たが、それによって地域の部族に加えて、隣国の一つと衝突も引き起こした。"
  siberian_events.5.a:0 "不幸だが必要な副作用だ。"
  siberian_events.5.b:1 "損害を受けたものを保証せねばなるまい。"
  siberian_events.6.t:0 "シベリアからの贈り物"
@@ -143,7 +143,7 @@
  russian_tsardom_events.8.a:0 "我等は官僚集団が必要だ。"
  russian_tsardom_events.8.b:0 "兵士と農民が行政に従事することを制限しよう。"
  russian_tsardom_events.9.t:0 "外国人将校"
- russian_tsardom_events.9.d:0 "他の欧州諸国からきた将校にとって、[Root.GetName]で雇用を探すことはますます一般的になってきた。有る面では、これは他日戦争における優位に繋がるだろうが、一方で彼らの求める給与は安くなく、我が国の将校にとっては軍内部で地位を得られずに自分たちが軽視されていると感じるかも知れない。"
+ russian_tsardom_events.9.d:0 "他の欧州諸国からきた将校にとって、[Root.GetName]で雇用を探すことはますます一般的になってきた。ある面では、これは他日戦争における優位に繋がるだろうが、一方で彼らの求める給与は安くなく、我が国の将校にとっては軍内部で地位を得られずに自分たちが軽視されていると感じるかも知れない。"
  russian_tsardom_events.9.a:0 "彼らを雇うとしよう。"
  russian_tsardom_events.9.b:0 "外国人の人材など必要ない。"
  russian_tsardom_events.10.t:0 "キリスト教の改宗"
