Save/Update files

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -1812,7 +1812,7 @@
  HREVOTE_PRESTIGE:0 "威信：$VAL$§W\n"
  HRE_SOMEONE_ELSE:0 "彼らは別の選帝侯の支持を獲得しているため、彼ら自身の候補者を支持しています。"
  HRE_MISSION_TO_VOTE:0 "投票がミッションの目標であるため。"
- HRE_THEY_VOTE_CAUSE:0 "彼らは誰に投票するかを評価する際に、我々を§Y$VAL$§W点で評価しています。"
+ HRE_THEY_VOTE_CAUSE:0 "彼らは誰に投票するか値踏みする際、我々を§Y$VAL$§W点で評価しています。"
  HRE_PREF_VOTE_CAUSE:0 "しかし彼らは$NAME$のほうがより好ましいと思っており、§Y$VAL$§W点で評価しています。"
  HRE_PREF_VOTE_CAUSE_SELF:0 "しかし彼らは自身のほうがより好ましいと思っており、§Y$VAL$§W点で評価しています。"
  HRE_EMP_VOTE_CAUSE:0 "$NAME$は§Y$VAL$§W点と評価されています。"
@@ -2383,7 +2383,7 @@
  FUTURE_CARDINALS:0 "有効な枢機卿が死ぬと、将来の枢機卿のうちの1人が有効な枢機卿として選ばれます。枢機卿は彼に最も多くのポイントを費やした人に忠実です。"
  CARDINAL_CONTROLLER:0 "$COUNTRY$ ($VAL$)"
  PAPAL_INFLUENCE_DESC:0 "教皇への影響力は、教皇への我々の影響力を表しています。これは、いつの日か、彼らが有効な枢機卿になった時に、彼らを我々に忠実にするために将来の枢機卿に費やすことができます。"
- NEW_PAPAL_INFLUENCE_DESC:0 "教皇への影響力は、教皇への我々の影響力を表しています。教皇の影響力の大きい国々で最大のカトリックの都市が選ばれ、カトリックの信仰を代表します。"
+ NEW_PAPAL_INFLUENCE_DESC:0 "教皇への影響力は、教皇への我々の影響力を表しています。教皇への影響力の大きい国々で最大のカトリックの都市が選ばれ、カトリックの信仰を代表します。"
  PAPAL_NOT_ALLOW:0 "§Rこの行動を取るためのすべての要件を満たしていません。§!"
  PAPAL_NOT_ENOUGH:0 "§Rこの行動を取るには少なくとも§Y$COST$§Rの教皇への影響力が必要です。§!"
  PAPAL_COST:0 "§Y$COST$§Wの教皇への影響力が必要です。"
