--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -251,7 +251,7 @@
  rajputs_estate_events.10.a:0 "宗教的寛容を保証し、$ESTATE_CHURCH$を非難する。"
  rajputs_estate_events.10.b:0 "[Root.Religion.GetName]へと改宗するようにラージプートに圧力をかける。"
  rajputs_estate_events.11.t:0 "ラージプート貴族制のディアスポラ"
- rajputs_estate_events.11.d:0 "ラージプート貴族は何世紀にもわたって至る所に広がってきましたが、同族関係のアイデンティティの強い感覚は共通の貴族文化を作り出しています。ラージプートの首長は、他のラージプートとの多くの世代を遡った際の関連について、その地位と歴史を知っている。\n\n我々の顧問は、多くのラージプートの中で、これらの縁が[Root.Country.GetName]の利益に利用される可能性を示唆しています。一番明らかなことは、我々に忠実なラージプートの首長は、近くの国のラージプートへ大使として行動でき、外国の王室での評判を高めることができます。もっと狡猾な選択肢は、ラージプートの古代の恨みを外国領土を請求するための手段として利用することです。"
+ rajputs_estate_events.11.d:0 "ラージプート貴族は何世紀にもわたって至る所に広がってきましたが、同族関係のアイデンティティの強い感覚は共通の貴族文化を作り出しています。ラージプートの首長は、他のラージプートとの多くの世代を遡った際の関連について、その地位と歴史を知っています。\n\n我々の顧問は、多くのラージプートの中で、これらの縁が[Root.Country.GetName]の利益に利用される可能性を示唆しています。一番明らかなことは、我々に忠実なラージプートの首長は、近くの国のラージプートへ大使として行動でき、外国の王室での評判を高めることができます。もっと狡猾な選択肢は、ラージプートの古代の恨みを外国領土を請求するための手段として利用することです。"
  rajputs_estate_events.11.a:0 "外交的つながりを確立する。"
  rajputs_estate_events.11.b:0 "先祖の仇を利用する。"
  rajputs_estate_events.11.c:0 "提案を無視する。"
@@ -789,7 +789,7 @@
  india_mission_events.4.a:0 "我々は清められた"
  india_mission_events.5.t:0 "マラーターの台頭"
  india_mission_events.5.d:0 "マラーターの中心地の征服に続き、[Root.Country.GetName]はマラーターの強い関心が向けられています。熱心な軍事奉仕で報いとして、マラーターが特権を持ち、最重要の地位にいるようにしました。彼らの権力が大きくなり、その効力が示されたので、仮にマラーターの将軍が[Root.Country.GetName]の玉座に就く適任者でないとしたら、疑いを口に出す人が大勢います。"
- india_mission_events.5.d2:0 "マラーターの中心地の征服に続き、[Root.Country.GetName]はマラーターの強い関心が向けられています。熱心な軍事奉仕で報いとして、マラーターが特権を持ち、最重要の地位にいるようにしました。我が軍事文化や軍事化政策は非常に効果的だと実証されました。"
+ india_mission_events.5.d2:0 "マラーターの中心地の征服に続き、[Root.Country.GetName]はマラーターの強い関心が向けられています。熱心な軍事奉仕への報いとして、マラーターが特権を持ち、最重要の地位にいるようにしました。我が軍事文化や軍事化政策は非常に効果的だと実証されました。"
  india_mission_events.5.b:0 "マラーターの将軍は我々を導くでしょう。"
  india_mission_events.5.c:0 "マラーターは我々の役に立つでしょう。"
  TRADE_COMPANY_INVESTMENTS_DESC:0 "交易会社投資は高価だが影響力のある交易会社の所有物である。 あなたが所有しているかどうかに関係なく、地域または交易会社地域のすべての州にかなりの有益な効果を与えることができます。 ほとんどは地域限定の効果ですが、一部はあなたの国全体に適用されます。"
