--- a/source/localisation/policies_l_english.yml
+++ b/source/localisation/policies_l_english.yml
@@ -248,7 +248,7 @@
  the_naval_supremacy_act:0 "海軍覇権法"
  desc_the_naval_supremacy_act:1 "船員に対する厳しい訓練体制が、我々の乗組員が最も効率的に封鎖や攻囲に対する外国の救援の拿捕を実施する方法を理解することを保証する。"
  the_maritime_intelligencer_unit:0 "海軍情報部門"
- desc_the_maritime_intelligencer_unit:0 "我が軍に情報を伝達する為に命を賭ける準備できている海軍内の忠実な船員を訓練することによって、そうしなければ逃したかもしれない好機を利用できる。"
+ desc_the_maritime_intelligencer_unit:0 "我が軍に情報を伝達する為に命を賭ける準備ができている海軍内の忠実な船員を訓練することによって、そうしなければ逃したかもしれない好機を利用できる。"
  the_nautic_education_act:0 "海事教育法"
  desc_the_nautic_education_act:0 "戦闘における砲撃の重要な原則を理解させるため、海軍将校のための高い教育水準を確保する。"
  zealous_captains:0 "熱狂的な船長"
