--- a/source/localisation/red_queen_text_l_english.yml
+++ b/source/localisation/red_queen_text_l_english.yml
@@ -227,7 +227,7 @@
  LANDING_dlc084_TEXT:0 "主な要素：\n- 新しいイギリスのミッション\n- 産業革命\n- 聖公会\n- 革新性\n- 海軍ドクトリン\n- 知識の共有"
  LANDING_dlc084_FLAVOR_TEXT:1 "弱々しい君主と強欲な貴族たちとの大陸での戦争で弱体化したため、15世紀半ばのイングランドには、来たるべき栄光の兆しさえ存在しませんでした。内戦、宗教的動乱、大火事、厄介な連合など、それは困難な道のりです。しかし、やがてグレートブリテンとなるこの国は、世界にまたがる交易帝国を支配し、思想と交易両面でイギリスの自由の理想を輸出しながら、世界がこれまで見た中で最も強力な国家となるのです。\n\n「Rule Britannia」は、ブリテン諸島の歴史と産業革命の初期の火花に焦点を当てたDLCです。イングランド、スコットランド、またはアイルランド王国の1つを支配し、それらを偉大な国家へと導きましょう！"
  LANDING_dlc090_TEXT:0 "主な要素：\n- 政府改革\n- 交易会社投資\n- インドの新しいミッションと階級\n- 勅許会社\n\n追加要素：\n- 見直された政策システム\n- モンスーン\n- 新しい侮辱方法\n- 植民者の新しい用途"
- LANDING_dlc090_FLAVOR_TEXT:1 "歴史と文化とに恵まれた地域は、交易を支配できる偉大な物質的富を帝国に約束します。領土とインドの富へのアクセスをめぐる競争には、外交上の機転と軍事力とが必要です。しかし、世界で最も収益性の高い市場におけるこの素晴らしいゲームで一体誰が誰を搾取するというのでしょうか？\n\n「Dharma」は、政府改革の導入を通じて、政府の意味を明確にする新しい方法を提供します。改革のさまざまな組み合わせにより、さまざまな政府が生まれます。王国は聖職者に権限を与えて国家を集権化するか、議会に権力を譲り貴族を削減するかを選択できます。\n\nどうやって支配するか、どうやって支配を拡大するか - 「Dharma」でそれを選択するのはあなたです。\n"
+ LANDING_dlc090_FLAVOR_TEXT:1 "歴史と文化とに恵まれた地域は、交易を支配できる偉大な物質的富を帝国に約束します。領土とインドの富へのアクセスをめぐる競争には、外交上の機転と軍事力とが必要です。しかし、世界で最も収益性の高い市場におけるこの素晴らしいゲームで一体誰が誰を搾取するというのでしょうか？\n\n「Dharma」は、政府改革の導入を通じて、政府の意味を明確にする新しい方法を提供します。改革のさまざまな組み合わせにより、さまざまな政府が生まれます。王国は聖職者に権限を与えて国家を集権化するか、議会に権力を譲り貴族を削減するかを選択できます。\n\nどうやって支配するか、どうやって支配を拡大するか - 「Dharma」でそれを選択するのはあなたです。"
  LANDING_dlc095_TEXT:0 "主な要素：\n- イベリアと北アフリカ国家向けの新しいミッション\n- マイノリティの追放\n- 修道会の設立\n- 海賊共和国\n- 旗艦\n- 海上砲撃"
  LANDING_dlc095_FLAVOR_TEXT:1 "コロンブスは最初の一人ではなかったかもしれませんが、彼こそが最も重要でした。彼の新世界への航海は、日の出の勢いであったスペイン王国によってすぐに利用され、その偉大なカトリック王国を、一世紀以上に及ぶヨーロッパ政治の中心における支配的な地位へと導きました。アステカの黄金とペルーの銀は、メキシコからマドリード、マニラへと広がる世界帝国の基礎を築きました。レコンキスタから財宝艦隊まで、帝国が築かれた日々を再び体験しましょう！"
  LANDING_dlc001_TEXT:0 "主な要素：\n- フランスとイギリスの11カ国向けレベル1の固有ユニットモデル"
