--- a/source/localisation/tutorial_l_english.yml
+++ b/source/localisation/tutorial_l_english.yml
@@ -178,7 +178,7 @@
  TUT_ADV_CHAPTER01_PAGE12_TEXT:0 "神聖ローマ帝国の画面では、どの国が神聖ローマ皇帝で、だれが選帝侯であるかを、また全諸侯を確認することができます。"
  TUT_ADV_CHAPTER01_PAGE12_OBJECTIVES:0 "§M次へ§!をクリックして続ける。"
  TUT_ADV_CHAPTER01_PAGE13_TITLE:0 "§Y教皇庁（13/16）§!"
- TUT_ADV_CHAPTER01_PAGE13_TEXT:0 "もし自国の国教がカトリックである場合、教皇庁システムを使うことができます。教皇庁一覧は教皇への影響力と、それを使って何ができるかについての情報を提供してくれます。教皇が亡くなるたびに、現役の枢機卿の中から新しい教皇が選出されます。自国が教皇庁支配国になる可能性を上げるために教皇への影響力を投資することもできます。"
+ TUT_ADV_CHAPTER01_PAGE13_TEXT:0 "もし自国の国教がカトリックである場合、教皇庁システムを使うことができます。教皇庁一覧は教皇への影響力と、それを使って何ができるかについての情報を提供してくれます。教皇が亡くなるたびに、現役の枢機卿の中から新しい教皇が選出されます。自国が教皇の支配者になる可能性を上げるために教皇への影響力を投資することもできます。"
  TUT_ADV_CHAPTER01_PAGE13_OBJECTIVES:0 "§M次へ§!をクリックして続ける。"
  TUT_ADV_CHAPTER01_PAGE14_TITLE:0 "§Y概要（14/16）§!"
  TUT_ADV_CHAPTER01_PAGE14_TEXT:0 "概要は進行状況、軍隊の人数、建設状況、外交官や商人の状態を簡潔に表示します。"
