--- a/source/localisation/mare_nostrum_l_english.yml
+++ b/source/localisation/mare_nostrum_l_english.yml
@@ -404,7 +404,7 @@
  espionage_events.6.a:0 "命令を与える。"
  espionage_events.6.b:0 "これらの人脈を利用するには、より良い方法があるはずだ。"
  espionage_events.7.t:0 "国王殺し!"
- espionage_events.7.d:0 "[From.GetAdjective]の暗殺者は、印象的な人脈網であったに違いないものを利用し、国際的な信用に違反する言い表わせないほどの罪を犯した。彼らは我々の[Root.Monarch.GetTitle]を殺害したのだ。犯人が捕まったにもかかわらず、殺害を命じた者ども[From.GetName]で安全に暮らしている可能性が非常に高く、我が国に彼らの陰謀を続けるための準備ができている。政府が衝撃から回復次第、[Root.GetName]のこれらの敵を攻撃する方法を考える必要がある。"
+ espionage_events.7.d:0 "[From.GetAdjective]の暗殺者は、印象的な人脈網であったに違いないものを利用し、国際的な信用に違反する言い表わせないほどの罪を犯した。彼らは我々の[Root.Monarch.GetTitle]を殺害したのだ。犯人が捕まったにもかかわらず、殺害を命じた者どもは[From.GetName]で安全に暮らしている可能性が非常に高く、我が国に彼らの陰謀を続けるための準備ができている。政府が衝撃から回復次第、[Root.GetName]のこれらの敵を攻撃する方法を考える必要がある。"
  espionage_events.7.a:0 "何という不名誉な一撃だ！"
  espionage_events.8.t:0 "$SPYMASTER$は隣国に疑いをかける"
  espionage_events.8.d:0 "密偵頭を雇用することで、主に海外での情報収集に貢献してきたが、$SPYMASTER$は時には防諜活動を調整することもある。最近、$SPYMASTER_POSS_PRONOUN$の調査により、近隣諸国の一つだけが実行可能な陰謀が発見された。どの隣国が背後にいるのかは不明だが、情報の交換には、その背後にいる者たちが近くにいることが必要である。\n\n$SPYMASTER$は、関与した可能性のある多くの外国の関係者を集めて厳しく尋問する準備をしているが、犯人についての矛盾する理論は、誰を目標とするかの決断を[Root.Monarch.GetTitle]に委ねている。隣国はおそらく告発を感謝しないだろうが、何かをする必要があり、それは急ぐ必要がある。"
