Save/Update files

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -3084,8 +3084,8 @@
  MATCHMAKING_REFRESH_LAN:0 "LANをスキャン"
  MATCHMAKING_REFRESH_LAN_STOP:0 "LANのスキャンを中止"
  MATCHMAKING_REFRESH_INTERNET:0 "ネットをスキャン"
- MATCHMAKING_HOST_SERVER:0 "ホストゲーム"
- MATCHMAKING_JOIN_SERVER:0 "ゲーム参加"
+ MATCHMAKING_HOST_SERVER:0 "ゲームをホスト"
+ MATCHMAKING_JOIN_SERVER:0 "ゲームに参加"
  MATCHMAKING_SERVERS_SEARCHING:0 "サーバーを検索中…"
  MATCHMAKING_SERVERS_NOSERVERS:0 "サーバーが見つかりません！"
  MATCHMAKING_SERVERS_DOSEARCH:0 "まだすべてのサーバーを検索していません。"
@@ -4445,7 +4445,7 @@
  NOT_REMOVE_RIVAL_UNTIL:0 "§R－最近§Y$NAME$§!をライバルとして追加したので、§Y$DATE$§!までは置き換えることはできません。§!"
  CANT_AFFORD_RIVAL_REMOVE:0 "§R- ライバルを削除するのに必要な§Y$COST$§!£dip£を持っていません。§!"
  NOT_ADD_RIVAL_UNTIL:0 "§R－最近§Y$NAME$§!をライバルから削除することを余儀なくされたため、§Y$DATE$§!までは再度追加することはできません。§!"
- LEDGER_PPROJ:0 "武威"
+ LEDGER_PPROJ:0 "戦力投射"
  EXTRA_BONUS_GOOD_SMALL:0 "少なくとも$MAX$の戦力投射を持っている場合、以下を獲得します：\n"
  EXTRA_BONUS_GOOD_SMALL_FACT:0 "\n少なくとも$VAL|Y$の戦力投射を持っていることにより：\n"
  EXTRA_BONUS_GOOD:0 "少なくとも$MAX$の戦力投射を持っている場合\n +1 £adm£\n +1 £dip£\n +1 £mil£を獲得します"
@@ -4916,7 +4916,7 @@
  mamluk_government_legacy_desc:0 "この国家はかつてマムルークの奴隷兵によって引き継がれ、兵士の奴隷の継続的な輸入によってそれ自身を支えた。"
  dutch_republic_legacy:0 "オランダ共和制"
  dutch_republic_legacy_desc:0 "オランダ共和制は、彼ら自身の政府を持ち非常に独立性の高い7つの州の連合体であり、大半の土地はスターテン・ヘネラールと連邦政府によって直接統治される。"
- CORRUPTION_EXPLANATION:1 "汚職が時間経過で増加する要因には、不均衡な研究、過剰拡大、宗教の不統一、最大ステート数を超えるテリトリー数の保有があります。減少要因としては、高い安定度、統治技術または外交技術の先行があります。これらの対策ができない場合も、ダカットを支払い続けることで、汚職はだんだん減少していきます。汚職はあらゆる君主力コスト、最小自治率、諜報防衛力、そして諜報網の構築速度に悪い影響を及ぼします。"
+ CORRUPTION_EXPLANATION:1 "汚職が時間経過で増加する要因には、不均衡な研究、過剰拡大、宗教の不統一、最大ステート数を超えるテリトリーの保有があります。減少要因としては、高い安定度、統治技術または外交技術の先行があります。これらの対策ができない場合も、ダカットを支払い続けることで、汚職はだんだん減少していきます。汚職はあらゆる君主力コスト、最小自治率、諜報防衛力、そして諜報網の構築速度に悪い影響を及ぼします。"
  comorin_cape:1 "コロマンデル"
  ADM:0 "統治"
  DIP:0 "外交"
