--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -1577,7 +1577,7 @@
  rus_reactionary_zeal:0 "反動的な熱意"
  desc_rus_reactionary_zeal:0 "革命派は鎮圧された！ツァーリの権威の妨げとなるものは何もない。"
  nov_defeated_muscovy:0 "モスクワの打破"
- desc_nov_defeated_muscovy:0 "敵モスクワを打ち破った。我軍は消耗したが、増援物資と経験は我が軍をさらに強くするだろう。"
+ desc_nov_defeated_muscovy:0 "敵モスクワを打ち破った。我が軍は消耗したが、増援物資と経験は我が軍をさらに強くするだろう。"
  nov_tver_conquest:0 "トヴェリの征服"
  desc_nov_tver_conquest:0 "トヴェリは今やノヴゴロドの従属国だ。円滑な統合を保証する為に出来ることは全て行っている。"
  nov_ruriks_eliminated:0 "リューリク朝の終わり"
