--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -1259,7 +1259,7 @@
  PROV_ADJ1269:0 "ホラント沿岸"
  PROV_ADJ1270:0 "ドッガーバンク"
  PROV_ADJ1271:0 "ドーバー海峡"
- PROV_ADJ1272:0 "チャネル"
+ PROV_ADJ1272:0 "イギリス海峡"
  PROV_ADJ1273:0 "タヴェタ"
  PROV_ADJ1274:0 "ブルターニュ沿岸"
  PROV_ADJ1275:0 "キブロン湾"
@@ -1270,7 +1270,7 @@
  PROV_ADJ1280:0 "フォース湾"
  PROV_ADJ1281:0 "シェトランド沿岸"
  PROV_ADJ1282:0 "マレー湾"
- PROV_ADJ1283:0 "北チャネル"
+ PROV_ADJ1283:0 "ノース海峡"
  PROV_ADJ1284:0 "アイリッシュ海"
  PROV_ADJ1285:0 "セントジョージ海峡"
  PROV_ADJ1286:0 "ドニゴール湾"
