--- a/source/localisation/tutorial_l_english.yml
+++ b/source/localisation/tutorial_l_english.yml
@@ -24,7 +24,7 @@
  TUT_SELECT_CHAPTER_DESC:0 "章の選択"
  TUT_BAS_CHAPTER01_BUTTON:0 "基本操作"
  TUT_BAS_CHAPTER01_TITLE:0 "基本操作"
- TUT_BAS_CHAPTER01_DESC:0 "この章では、ゲームの非常に基本的なプレイ方法について学びます。これには§Mカメラ§!と§Mゲームスピード§!の操作方法が含まれています。"
+ TUT_BAS_CHAPTER01_DESC:0 "この章では、ゲームの非常に基本的なプレイ方法について学びます。これには§Mカメラ§!と§Mゲーム速度§!の操作方法が含まれています。"
  TUT_BAS_CHAPTER01_PAGE01_TITLE:0 "§Yはじめに（1/8）§!"
  TUT_BAS_CHAPTER01_PAGE01_TEXT:0 "§M最小化§!ボタンをクリックすると、いつでもこのインターフェースを最小化することができます。再表示するには§M最大化§!ボタンをクリックしてください。"
  TUT_BAS_CHAPTER01_PAGE01_OBJECTIVES:0 "§M次へ§!をクリックして続ける。"
@@ -232,7 +232,7 @@
  TUT_ADV_CHAPTER03_PAGE04_TEXT:0 "§M商人§!は交易ノードで2つの異なる行動を実行できます。§M交易から資金を回収§!するにはその交易ノードの州を領有し、交易収入を得ることが必要です。あなたの§M交易力§!が競争相手と比べてどの程度大きいかによって、得られる§M交易収入§!の大きさが決定されます。\n\n§Yゲームの一時停止の解除を忘れないでくださいね。§!"
  TUT_ADV_CHAPTER03_PAGE04_OBJECTIVES:0 "§Mヴェネツィア交易ノード§!の商人に§M交易から資金を回収§!させてください。"
  TUT_ADV_CHAPTER03_PAGE05_TITLE:0 "§Y交易力を送る（5/11）§!"
- TUT_ADV_CHAPTER03_PAGE05_TEXT:0 "§M商人§!が行えるふたつめの行動は§M交易力を送る§!ことです。これにより、ある§M交易ノード§!から別の交易ノードへと§M交易額§!を移送させられます。交易額の移送量は競争相手と比べた§M交易力§!の割合によって決定されます。\n§Y§Mアレクサンドリア州§Yを選択し、ボタンをクリックして交易ノードに移動します。ゲームの一時停止の解除を忘れないでください。§!"
+ TUT_ADV_CHAPTER03_PAGE05_TEXT:0 "§M商人§!が行える2つめの行動は§M交易力を送る§!ことです。これにより、ある§M交易ノード§!から別の交易ノードへと§M交易額§!を移送させられます。交易額の移送量は競争相手と比べた§M交易力§!の割合によって決定されます。\n§Y§Mアレクサンドリア州§Yを選択し、ボタンをクリックして交易ノードに移動します。ゲームの一時停止の解除を忘れないでください。§!"
  TUT_ADV_CHAPTER03_PAGE05_OBJECTIVES:0 "§Mアレクサンドリア交易ノード§!に行き、商人に§M交易力を送§!らせてください。"
  TUT_ADV_CHAPTER03_PAGE06_TITLE:0 "§Y交易マップモード（6/11）§!"
  TUT_ADV_CHAPTER03_PAGE06_TEXT:0 "交易マップモードは異なる§M交易ノード§!がどこにあるのか、どの州がそれに属しているのか、交易がどのように操られているかを示しています。ここを見れば分かるように、今アレクサンドリアからヴェネツィアへと§M交易力が送§!られています。交易は矢印の向いている方にしか流れません。幾つかの交易ノードはいわゆる§M終端ノード§!であり、ここからはもう交易は流出させられないことを意味します。§Mヴェネツィア§!と§Mジェノヴァ§!は終端ノードの2つの例です。§M交易力§!はある交易ノードから別の交易ノードへ§M交易額§!がどの位移送されるかを決定します。"
@@ -251,7 +251,7 @@
  TUT_ADV_CHAPTER03_PAGE10_OBJECTIVES:0 "§M5隻の小型船（バーク）§!を建造してください。"
  TUT_ADV_CHAPTER03_PAGE11_TITLE:0 "§Y章のおわりに（11/11）§!"
  TUT_ADV_CHAPTER03_PAGE11_TEXT:0 "これでチュートリアルの交易の章を終了します。Europa Universalis IV の交易がどのように機能しているのかをよく理解していただけたなら幸いです。"
- TUT_ADV_CHAPTER03_PAGE11_OBJECTIVES:0 "チュートリアルメニューにもどるには§M終了§!をクリックしてください。"
+ TUT_ADV_CHAPTER03_PAGE11_OBJECTIVES:0 "チュートリアルメニューに戻るには§M終了§!をクリックしてください。"
  TUT_CAM_CHAPTER01_TITLE:0 "レコンキスタ"
  TUT_CAM_CHAPTER01_DESC:1 "この章は、§Mユニットの生産§!、§Mミッション§!、§M戦争§!、§M征服§!を説明します。"
  TUT_CAM_CHAPTER01_BUTTON:0 "レコンキスタ"
